fix image alignment

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -33,6 +33,7 @@ a {
 #gallery {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .gallery-item {
